GWCFS-1416-psp-address-tttech-errata-pci-7

--- a/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
@@ -65,6 +65,7 @@ target_link_libraries(${FT_NAME}_ft
     iodriver
     vxworks_sysmon
     ping
+    tte_errata
     psp-${CFE_PSP_TARGETNAME}-impl
     psp-${CFE_PSP_TARGETNAME}-shared
     )
