--- a/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
@@ -51,6 +51,8 @@ if (CODE_COVERAGE)
     file(MAKE_DIRECTORY ${TMP_FOLDER_CODE_COVERAGE})
     mergeFilesTo( psp_vxworks_sysmon_testcases.c ${PROJECT_SOURCE_DIR}/fsw/modules/vxworks_sysmon/vxworks_sysmon.c "#include \"../../modules/vxworks_sysmon/vxworks_sysmon.c\"" ${TMP_FOLDER_CODE_COVERAGE}/psp_vxworks_sysmon_testcases.c)
     mergeFilesTo( psp_ping_testcases.c ${PROJECT_SOURCE_DIR}/fsw/modules/ping/cfe_psp_ping.c "#include \"../../modules/ping/cfe_psp_ping.c\"" ${TMP_FOLDER_CODE_COVERAGE}/psp_ping_testcases.c)
+    mergeFilesTo( psp_tte_errata_pci7_testcases.c ${PROJECT_SOURCE_DIR}/fsw/modules/tte_errata/src/tte_errata_pci7.c "#include \"../../modules/tte_errata/src/tte_errata_pci7.c\"" ${TMP_FOLDER_CODE_COVERAGE}/psp_tte_errata_pci7_testcases.c)
+    mergeFilesTo( psp_tte_errata_testcases.c ${PROJECT_SOURCE_DIR}/fsw/modules/tte_errata/src/tte_errata.c "#include \"../../modules/tte_errata/src/tte_errata.c\"" ${TMP_FOLDER_CODE_COVERAGE}/psp_tte_errata_testcases.c)
     mergeFilesTo( psp_exception_testcases.c ${IMPL_DIR}/src/cfe_psp_exception.c "#include \"../src/cfe_psp_exception.c\"" ${TMP_FOLDER_CODE_COVERAGE}/psp_expection_testcases.c)
     mergeFilesTo( psp_memory_testcases.c ${IMPL_DIR}/src/cfe_psp_memory.c "#include \"../src/cfe_psp_memory.c\"" ${TMP_FOLDER_CODE_COVERAGE}/psp_memory_testcases.c)
     mergeFilesTo( psp_flash_testcases.c ${IMPL_DIR}/src/cfe_psp_flash.c "#include \"../src/cfe_psp_flash.c\"" ${TMP_FOLDER_CODE_COVERAGE}/psp_flash_testcases.c)
@@ -80,6 +82,7 @@ add_definitions(-D_CFE_PSP_MODULE_)
 include_directories(${PROJECT_SOURCE_DIR}/unit-test-coverage/ut-stubs/inc)
 include_directories(${PROJECT_SOURCE_DIR}/fsw/modules/vxworks_sysmon)
 include_directories(${PROJECT_SOURCE_DIR}/fsw/modules/iodriver/inc)
+include_directories(${PROJECT_SOURCE_DIR}/fsw/modules/tte_errata/inc)
 
 # Source for Ping module
 include_directories(${PROJECT_SOURCE_DIR}/fsw/modules/ping/inc)
