GWCFS-2423 PSP - Update GR740 PSP

--- a/unit-test-coverage/ut-stubs/CMakeLists.txt
+++ b/unit-test-coverage/ut-stubs/CMakeLists.txt
@@ -57,6 +57,7 @@
 #*****************************************************************************************************************
 
 add_library(ut_psp_libc_stubs STATIC EXCLUDE_FROM_ALL
+    src/libc-stat-stubs.c
     src/libc-stdio-stubs.c
     src/libc-stdlib-stubs.c
     src/libc-string-stubs.c
